# lib_calvin_old

./: .gitattributes  .gitignore  README.md
akka_bench/: build.sbt
bench_manual_result/: akka_bench.json
bench_upload_script/: http_post_json.rb  main.rb
bench_upload_script/bench_manual_result/: s_012.json  s_018.json
cpp/cuda/: cuda.sln
cpp/hacking/: common.props  hacking.sln
cpp/lib_calvin/: common.props  lib_calvin.sln  release.props  win32.props  x64.props
cpp/practice/: Local.testsettings  TraceAndTestImpact.testsettings  practice.sln  practice.sln.old  practice.suo.old  practice.vsmdi
cs/AP_positioning/: AP_positioning.sln
cs/Gostop/: Applications.vsmdi  Gostop.sln  Local.testsettings  TraceAndTestImpact.testsettings
cs/Installer/: Installer.sln
cs/WindowsFormsApp/: WindowsFormsApp.sln
data/bench_manual_result/: akka_bench.json  s_012.json  s_018.json
data/mnist/: data_files_info.txt
db_bench/: .gitignore  build.sbt
dotnet/web/: web.sln
fortran/: a1.f
js/node/: target.txt  watcher-argv.js  watcher-spawn.js  watcher.js
lib/json/: json.hpp
lib_calvin/: common.props  lib_calvin.sln
lib_calvin/benchmark/: bench.cc  bench.h  bench_main.cc  benchmark.vcxproj  benchmark.vcxproj.filters  boost_graph.h  container_bench.cc  container_bench.h  etc_bench.cc  etc_bench.h  graph_bench.cc  graph_bench.h  matrix_bench.cc  matrix_bench.h  neural_network_bench.cc  neural_network_bench.h  sorting_bench.cc  sorting_bench.h  string_bench.cc  string_bench.h
lib_calvin/benchmark_string/: benchmark_string.vcxproj  benchmark_string.vcxproj.filters  main.cc  string_bench.cc  string_bench.h
lib_calvin/container/: adt.cc  adt.h  adt_test.cc  adt_test.h  array.h  b_tree.h  b_tree_base.h  b_tree_base.h.rej  b_tree_test.h  bin_tree.h  bin_tree_base.h  container.h  container.vcxproj  container.vcxproj.filters  container_main.cc  container_test.cc  container_test.h  google_btree.h  (+18 more)
mssql/: backup hacking.sql  copy.sql  count.sql  dictionary_autocomplete.sql  remove duplication chain.sql  truncate.sql
mysql/: dictionary_autocomplete.sql
php/: index.php
python/: helloworld.c  setup.py  sort.py
sqlserver/: attach_database.sql  count.sql  create index.sql  dictionary_autocomplete.sql  remove duplication password.sql  truncate log.sql
src/: .gitignore  CMakeLists.txt  debug.props  release.props  win32.props
src/benchmark/: bench.cc  bench_main.cc  benchmark.vcxproj  benchmark.vcxproj.filters  boost_string_algorithm.h  container_bench.cc  etc_bench.cc  graph_bench.cc  neural_network_bench.h  string_bench.cc
src/container/: adt.h  array.h  b_plus_tree.h  b_tree_base.h  bin_tree_base.h  container_test_types.h  hash_table.h  hash_table2.h  map.h  map_test.cc  ordered_array.h  rb_tree.h  set_test.cc  vector.h  vector_test.cc
src/cuda/: sample.h
src/graph/: boost_graph.h  graph.h  graph_main.cc  graph_test.h  simple_graph.h
src/lexer/: lexer.vcxproj.filters  lexer_main.cc
src/lib/boost_1_67_0/boost/sort/block_indirect_sort/blk_detail/: parallel_sort.hpp
src/lib/boost_1_67_0/boost/sort/common/: spinlock.hpp
src/lib/boost_1_67_0/boost/sort/common/util/: merge.hpp
src/lib/boost_1_67_0/boost/sort/flat_stable_sort/: flat_stable_sort.hpp
src/lib/mkl/intel64/: mkl_core.lib  mkl_core_dll.lib  mkl_intel_lp64_dll.lib  mkl_tbb_thread.lib  mkl_tbb_thread_dll.lib
src/lib_calvin/: CMakeLists.txt  lib_calvin.sln  x64.props
src/lib_calvin/_build/: CMakeCache.txt  cmake_install.cmake
src/lib_calvin/benchmark/: bench.h  container_bench.h  etc_bench.h  graph_bench.h  matrix_bench.cc  sorting_bench.h  string_bench.h
src/lib_calvin/container/: adt.cc  array.h  b_tree_base.h  b_tree_test.cc  bin_plus_tree.h  container.h  container.vcxproj  container.vcxproj.filters  container_test.cc  hash_set.h  map_test.cc  ordered_array.h  rb_tree_base.h  set.h  set_test.h
src/lib_calvin/cuda/: matrix_multi.h  sample.cc  sample.cu
src/lib_calvin/graph/: graph.cc  graph.vcxproj  graph_test.cc
src/lib_calvin/lexer/: lexer.h  lexer_test.cc  lexer_test.h
src/lib_calvin/matrix/: matrix.vcxproj  matrix.vcxproj.filters  matrix_main.cc
src/lib_calvin/neural_network/: handwritten_digits_analyzer.h
src/lib_calvin/parser/: parser.vcxproj
src/lib_calvin/rainbow_table/: lib.cc  lib.h  rainbow_table.h  rainbow_table.vcxproj.filters  rainbow_table_test.h
src/lib_calvin/sorting/: counting_sort.h  heap_sort.h  intro_sort.h  merge_sort.h  sort_main.cc  sorting.vcxproj
src/lib_calvin/sorting_speed/: original_place.cc  original_place.h  sort_by_group.h  sorting_speed.vcxproj.filters
src/lib_calvin/string/: kmp.h  naive_matching.h  std_boyer_moore_horspool.h  string.vcxproj.filters  string_test.cc
src/lib_calvin/subcc/: subcc_parser.cc  subcc_parser.h  subcc_symbol_table.cc  subcc_syntax_tree.h  subcc_three_address.h  subcc_type.h
src/lib_calvin/subcc/output/: assembly.cc
src/lib_calvin/subcc_interpreter/: subcc_interpreter.vcxproj.filters
src/lib_calvin/test/: test.vcxproj.filters
src/lib_calvin/util/: factory.h  util.vcxproj.filters  util_main.cc
src/matrix/: mkl_multi.cc
src/neural_network/: handwritten_digits_analyzer.cc  neural_network.cc  neural_network.vcxproj  neural_network_main.cc
src/rainbow_table/: rainbow_table.vcxproj
src/rainbow_table_db_script/Hacking/src/db/: Loader.scala
src/sorting/: in_place_merge_sort.h  insertion_sort.h  intro_sort_parallel.h  merge_sort.h  sort.h  sort_test.cc  sort_test.h
src/sorting_speed/: sort_by_group.cc
src/string/: abstract_string.h  boyer_moore.h  palindrome.h  string.vcxproj  string_main.cc
src/subcc/: subcc_code_generator.cc  subcc_compiler.cc  subcc_compiler.h  subcc_lexer.h  subcc_main.cc  subcc_test.cc  subcc_type.cc
src/subcc_interpreter/: subcc_interpreter.cc
src/test/: test.vcxproj  test_main.cc
src/util/: random.cc  random.h  thread.cc  thread.h  util.vcxproj  utility.h
sub/: 가족끼리 왜 이래.E01.140816.HDTV.H264.720p-WITH.smi
web/: Untitled-1.jsp
(+1394 files in other folders)
